started the ICCC paper

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Papers/WUT-Master-Thesis/main.run.xml
 Papers/WUT-Master-Thesis/main.synctex.gz
 Papers/WUT-Master-Thesis/main.toc
 Papers/WUT-Master-Thesis/out/
+Papers/ICCC-2023/out/
