started another shitty paper that noone will ever read or care about

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ Papers/WUT-Master-Thesis/main.synctex.gz
 Papers/WUT-Master-Thesis/main.toc
 Papers/WUT-Master-Thesis/out/
 Papers/ICCC-2023/out/
+Papers/ENASE-2023/out/c-=-1 05.11.2022.pdf
+Papers/ENASE-2023/out/c-=-1 06.11.2022.pdf
+Papers/ENASE-2023/out/c-=-1 review.pdf
+Papers/ENASE-2023/out/c-=-1.aux
+Papers/ENASE-2023/out/c-=-1.bbl
+Papers/ENASE-2023/out/c-=-1.blg
+Papers/ENASE-2023/out/c-=-1.fdb_latexmk
+Papers/ENASE-2023/out/c-=-1.fls
+Papers/ENASE-2023/out/c-=-1.pdf
+Papers/ENASE-2023/out/c-=-1.synctex.gz
