started presentation for fedcis 2023

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ Papers/WUT-Master-Thesis/out/
 Papers/ICCC-2023/out/
 Papers/ENASE-2023/out/
 Papers/FEDCIS-2023/out/
+Papers/FEDCIS-2023-presentation/out/
